fix: text overflow ellipse

--- a/assets/wizards/dashboard/components/site-statuses/index.scss
+++ b/assets/wizards/dashboard/components/site-statuses/index.scss
@@ -37,7 +37,7 @@
             display: none;
 
             &.hidden {
-                display: inline-block;
+                display: contents;
             }
         }
     }
